--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
 	"license": "ISC",
 	"dependencies": {
 		"bcryptjs": "^2.4.3",
+		"bootstrap": "^4.4.1",
 		"concurrently": "^5.1.0",
 		"config": "^3.3.0",
 		"cors": "^2.8.5",
@@ -25,6 +26,7 @@
 		"express": "^4.17.1",
 		"jsonwebtoken": "^8.5.1",
 		"mongoose": "^5.7.11",
-		"nodemon": "^2.0.2"
+		"nodemon": "^2.0.2",
+		"react-bootstrap": "^1.0.0"
 	}
 }
