--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
 		"jsonwebtoken": "^8.5.1",
 		"mongoose": "^5.7.11",
 		"nodemon": "^2.0.2",
-		"react-bootstrap": "^1.0.0"
+		"react-bootstrap": "^1.0.0",
+		"react-transition-group": "^4.3.0"
 	}
 }
