--- a/package.json
+++ b/package.json
@@ -1,34 +1,36 @@
 {
-	"name": "backend",
-	"version": "1.0.0",
-	"description": "",
-	"main": "index.js",
-	"scripts": {
-		"client-install": "npm install --prefix client",
-		"start": "node server.js",
-		"server": "nodemon server",
-		"client": "npm start --prefix client",
-		"dev": "concurrently \"npm run server\" \"npm run client\""
-	},
-	"engines": {
-		"node": "12.16.0"
-	},
-	"keywords": [],
-	"author": "",
-	"license": "ISC",
-	"dependencies": {
-		"axios": "^0.19.2",
-		"bcryptjs": "^2.4.3",
-		"bootstrap": "^4.4.1",
-		"concurrently": "^5.1.0",
-		"config": "^3.3.0",
-		"cors": "^2.8.5",
-		"dotenv": "^8.2.0",
-		"express": "^4.17.1",
-		"jsonwebtoken": "^8.5.1",
-		"mongoose": "^5.7.11",
-		"nodemon": "^2.0.2",
-		"react-bootstrap": "^1.0.0",
-		"react-transition-group": "^4.3.0"
-	}
+  "name": "backend",
+  "version": "1.0.0",
+  "description": "",
+  "main": "index.js",
+  "scripts": {
+    "client-install": "npm install --prefix client",
+    "start": "node server.js",
+    "server": "nodemon server",
+    "client": "npm start --prefix client",
+    "dev": "concurrently \"npm run server\" \"npm run client\"",
+    "heroku-postbuild": "cd client && npm install --only=dev && npm install && npm run build"
+  },
+  "engines": {
+    "node": "12.16.0"
+  },
+  "keywords": [],
+  "author": "",
+  "license": "ISC",
+  "dependencies": {
+    "axios": "^0.19.2",
+    "bcryptjs": "^2.4.3",
+    "bootstrap": "^4.4.1",
+    "concurrently": "^5.1.0",
+    "config": "^3.3.0",
+    "cors": "^2.8.5",
+    "dotenv": "^8.2.0",
+    "express": "^4.17.1",
+    "heroku": "^7.42.5",
+    "jsonwebtoken": "^8.5.1",
+    "mongoose": "^5.7.11",
+    "nodemon": "^2.0.2",
+    "react-bootstrap": "^1.0.0",
+    "react-transition-group": "^4.3.0"
+  }
 }
