--- a/package.json
+++ b/package.json
@@ -9,10 +9,10 @@
     "server": "nodemon server",
     "client": "npm start --prefix client",
     "dev": "concurrently \"npm run server\" \"npm run client\"",
-    "heroku-postbuild": "cd client && npm install --only=dev && npm install && npm run build"
+    "heroku-postbuild": "npm install && cd client && npm install --only=dev && npm run build"
   },
   "engines": {
-    "node": "12.16.0"
+    "node": "12.17.0"
   },
   "keywords": [],
   "author": "",
